--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,13 @@ dependencies:
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.2
+    get: ^4.6.5
+    google_fonts: ^3.0.1
+    awesome_dialog: ^2.2.1
+    flutter_svg: ^1.1.0
+    hive: ^2.2.2
+    hive_flutter:
+    auto_size_text: ^3.0.0
 
 dev_dependencies:
     flutter_test:
@@ -56,8 +63,8 @@ flutter:
     uses-material-design: true
 
     # To add assets to your application, add an assets section, like this:
-    # assets:
-    #   - images/a_dot_burr.jpeg
+    assets:
+        - assets/vectors/Empty-amico.svg
     #   - images/a_dot_ham.jpeg
 
     # An image asset can refer to one or more resolution-specific "variants", see
